<resources>
    <string name="app_name">Doctor</string>
    <string name="button_finish">FINISH</string>
    <string name="ellipsis">&#8230;</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="book">Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tag_menu">menu</string>
    <string name="tag_content">content</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="srn_drawer_open">Open</string>
    <string name="srn_drawer_close">Close</string>
    <string name="srn_ex_no_menu_view">No view for menu provided. You must either call .withMenuView(View) or pass a valid resource id to .withMenuLayout(int)</string>
    <string name="srn_ex_bad_content_view">Your content view must contain exactly one child. Make sure you call inject() after setContentView().</string>
    <string name="slycalendar_singledate" translatable="false">EE, dd MMMM</string>
    <string name="slycalendar_short" translatable="false">EE, dd</string>
    <string name="slycalendar_short_month" translatable="false">EE, dd MMM</string>
    <string name="slycalendar_dates_period" translatable="false">%1$s – %2$s</string>
    <string name="slycalendar_cancel">Cancel</string>
    <string name="slycalendar_save">Save</string>
    <string name="slycalendar_next">Next</string>
    <string name="slycalendar_prev">Prev</string>
    <string name="dateFormat" translatable="false">EE, dd MMM</string>
    <string name="timeFormat" translatable="false">EE, dd MMM HH:mm</string>
    <string name="period" translatable="false">%1$s – %2$s</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="picker_today">Today</string>
    <string name="picker_am">AM</string>
    <string name="picker_pm">PM</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="scan_image">Scan image</string>
    <string name="camera">Camera</string>
    <string name="create">Create</string>
    <string name="create_barcode">Create barcode</string>
    <string name="delete">Delete</string>
    <string name="saved_to_downloads">Saved to Downloads</string>
    <string name="qr_code">QR Code</string>
    <string name="text">Text</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="digits">Digits</string>
    <string name="text_in_upper_case_without_special_characters">Text in upper case without special characters</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="save_as">Save as</string>
    <string name="permissions">Permissions</string>
    <string name="confirm">Confirm</string>
    <string name="clear_history">Clear history</string>
    <string name="flash">Flash</string>
    <string name="create_qr_code">Create QR code</string>
    <string name="search_engines">Search Engines</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="youtube" translatable="false">YouTube</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="xda" translatable="false">XDA</string>
    <string name="google_dev">Google Dev</string>
    <string name="open_me">Open me :)</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="code_of_conduct">Code of Conduct</string>
    <string name="more_apps">More apps…</string>
    <string name="dev_feedback">Mail to dev</string>
    <string name="feedback">Feedback</string>
    <string name="supported_formats">Supported formats</string>
    <string name="feedback_tooltip">Send us your review on Google Play Store.</string>
    <string name="feedback_toast">Thanks for rating us!</string>
    <string name="rate_us">Rate our app!</string>
    <string name="license">License</string>
    <string name="license_hint" translatable="false">General Public License-3.0</string>
    <string name="theme">Theme</string>
    <string name="music_sleep_timer" translatable="false">Music Sleep Timer</string>
    <string name="english_with_lidia" translatable="false">English with Lidia</string>
    <string name="android_studio_tutorials" translatable="false">Android Studio Tutorials</string>
    <string name="low_brightness" translatable="false">Low Brightness</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_default_message">Something went wrong</string>
    <string name="dialog_delete_clear_history_message">Delete history?</string>
    <string name="dialog_delete_barcode_message">Delete?</string>
    <string name="dialog_edit_barcode_name_title">Edit name</string>
    <string name="activity_scan_barcode_from_file_rotate_left">Rotate left</string>
    <string name="activity_scan_barcode_from_file_rotate_right">Rotate right</string>
    <string name="activity_scan_barcode_from_file_change_image">Choose another image</string>
    <string name="fragment_create_barcode_qr_code_clipboard">Content from clipboard</string>
    <string name="fragment_create_barcode_qr_code_show_all">More QR codes</string>
    <string name="fragment_create_barcode">Barcode</string>
    <string name="fragment_create_barcode_show_all">Barcodes and other 2D codes</string>
    <string name="fragment_create_barcode_list_2d">2D barcodes</string>
    <string name="fragment_create_barcode_list_1d">1D barcodes</string>
    <string name="activity_create_barcode_contacts_menu_item_title">Contacts</string>
    <string name="fragment_create_barcode_alternative">Alternatively:</string>
    <string name="fragment_create_qr_code_url_alternative">- Open your browser app\n- Load a website\n- Click \"Share\" from the menu\n- Select this app.</string>
    <string name="fragment_create_qr_code_wifi_encryption_hint">Encryption</string>
    <string name="fragment_create_qr_code_wifi_network_name_hint">Network name</string>
    <string name="fragment_create_qr_code_wifi_password_hint">Password</string>
    <string name="fragment_create_qr_code_wifi_is_hidden_hint">Hidden</string>
    <string name="fragment_create_qr_code_email_subject_hint">Subject</string>
    <string name="fragment_create_qr_code_message_hint">Message</string>
    <string name="fragment_create_qr_code_mms_subject_hint">Subject</string>
    <string name="fragment_create_qr_code_cryptocurrency_type_hint">Cryptocurrency</string>
    <string name="fragment_create_qr_code_cryptocurrency_address_hint">Receiver address</string>
    <string name="fragment_create_qr_code_cryptocurrency_amount_hint">Amount</string>
    <string name="fragment_create_qr_code_cryptocurrency_label_hint">Label</string>
    <string name="fragment_create_qr_code_location_latitude_hint">Latitude</string>
    <string name="fragment_create_qr_code_location_longitude_hint">Longitude</string>
    <string name="fragment_create_qr_code_location_altitude_hint">Altitude (optional)</string>
    <string name="fragment_create_qr_code_otp_type_hint">Type</string>
    <string name="fragment_create_qr_code_otp_algorithm_hint">Algorithm</string>
    <string name="fragment_create_qr_code_otp_issuer_hint">Issuer</string>
    <string name="fragment_create_qr_code_otp_account_hint">Account</string>
    <string name="fragment_create_qr_code_otp_period_hint">Period</string>
    <string name="fragment_create_qr_code_otp_counter_hint">Counter</string>
    <string name="fragment_create_qr_code_otp_secret_hint">Secret</string>
    <string name="fragment_create_qr_code_otp_generate_random_secret">Random Secret</string>
    <string name="fragment_create_qr_code_event_organizer_hint">Organizer</string>
    <string name="fragment_create_qr_code_event_summary_hint">Summary</string>
    <string name="fragment_create_qr_code_event_start_date_hint">Start date</string>
    <string name="fragment_create_qr_code_event_end_date_hint">End date</string>
    <string name="fragment_create_qr_code_contact_first_name_hint">First Name</string>
    <string name="fragment_create_qr_code_contact_last_name_hint">Last Name</string>
    <string name="fragment_create_qr_code_contact_organization_hint">Organization</string>
    <string name="fragment_create_qr_code_contact_job_hint">Job</string>
    <string name="fragment_create_qr_code_contact_email_hint">Email</string>
    <string name="fragment_create_qr_code_contact_phone_hint">Phone</string>
    <string name="fragment_create_qr_code_contact_fax_hint">Fax</string>
    <string name="fragment_create_qr_code_contact_website_hint">Website</string>
    <string name="fragment_create_qr_code_contact_alternative">- Open your contacts app\n- Open an existing contact or create a new one\n- Click \"Share\" from the menu\n- Select this app</string>
    <string name="text_without_special_characters">Text without special characters</string>
    <string name="seven_digits">7 digits</string>
    <string name="fragment_create_ean_13_hint">12 digits</string>
    <string name="fragment_create_itf_14_hint">Even number of digits</string>
    <string name="fragment_create_upc_a_hint">11 digits</string>
    <string name="fragment_more_tittle">More</string>
    <string name="export_history">Export history</string>
    <string name="activity_export_history_as_hint">Export as</string>
    <string name="activity_export_history_file_name_hint">File name</string>
    <string name="activity_export_history_file_name_default" translatable="false">db</string>
    <string name="activity_export_history_export">Export</string>
    <string name="fragment_settings_appearance_settings">Appearance</string>
    <string name="fragment_settings_inverse_barcode_colors_in_dark_theme">Inverse colors</string>
    <string name="fragment_settings_inverse_barcode_colors_in_dark_theme_hint">Show codes with white content on dark background &amp; dark mode.</string>
    <string name="fragment_settings_scanner_settings">Scanner</string>
    <string name="fragment_settings_open_content_automatically">Open content of scanned codes automatically</string>
    <string name="fragment_settings_open_content_automatically_hint">May open harmful content.</string>
    <string name="fragment_settings_copy_to_clipboard">Copy to clipboard</string>
    <string name="fragment_settings_copy_to_clipboard_hint">Copy scanned barcodes to clipboard.</string>
    <string name="fragment_settings_simple_auto_focus">Simple auto focus mode</string>
    <string name="fragment_settings_simple_auto_focus_hint">Enable only if you have problems focusing.</string>
    <string name="fragment_settings_flash_hint">Enable flash on start.</string>
    <string name="fragment_settings_vibrate">Vibrate</string>
    <string name="fragment_settings_vibrate_hint">Vibrate on scan.</string>
    <string name="fragment_settings_continuous_scanning">Continuous scanning</string>
    <string name="fragment_settings_continuous_scanning_hint">Save scans to history only.</string>
    <string name="fragment_settings_confirm_scans_manually">Confirm scans manually</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>