<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:contentDescription="@string/home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/favoriteFragment"
        android:contentDescription="@string/favorite"
        android:icon="@drawable/favorite"
        android:title="@string/favorite" />

<!--    <item-->
<!--        android:id="@+id/bookFragment"-->
<!--        android:contentDescription="@string/book"-->
<!--        android:icon="@drawable/book"-->
<!--        android:title="@string/book" />-->
    <item
        android:id="@+id/profileFragment"
        android:contentDescription="@string/profile"
        android:icon="@drawable/person"
        android:title="@string/profile" />
</menu>